--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ a {
   text-decoration: none;
   color: #ffb03b;
 }
-//hi this is chandrika
-//hi tammana chandrika naga durga
+//my fourth .carousel-item-next.carousel-item-start
 h1,
 h2,
 h3,
